tests/NormalTests/paczka1/fuzzy1/61804511.err
Error in line 6: uhxACrH A937 44,7
Error in line 17: kI8jn S34 48,06
Error in line 22: IneHaPaR Sx29 4x,4
Error in line 32: onR S720 52,3
